--- a/Course-1_Supervised Machine Learning - Regression and Classification/2_Regression with multiple input variables/programming resources/C1_W2_Lab05_Sklearn_GD_Soln.ipynb
+++ b/Course-1_Supervised Machine Learning - Regression and Classification/2_Regression with multiple input variables/programming resources/C1_W2_Lab05_Sklearn_GD_Soln.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "24068403",
    "metadata": {},
    "source": [
     "# Optional Lab: Linear Regression using Scikit-Learn"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79e7cd25",
    "metadata": {},
    "source": [
     "There is an open-source, commercially usable machine learning toolkit called [scikit-learn](https://scikit-learn.org/stable/index.html). This toolkit contains implementations of many of the algorithms that you will work with in this course.\n",
@@ -17,6 +19,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "932dc33d",
    "metadata": {},
    "source": [
     "## Goals\n",
@@ -26,6 +29,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e925d161",
    "metadata": {},
    "source": [
     "## Tools\n",
@@ -34,7 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "d2ed2d48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +55,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65c565b0",
    "metadata": {},
    "source": [
     "# Gradient Descent\n",
@@ -58,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c915f17",
    "metadata": {},
    "source": [
     "### Load the data set"
@@ -66,6 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cf4f91a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +83,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66e887b9",
    "metadata": {},
    "source": [
     "### Scale/normalize the training data"
@@ -83,6 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bd403eab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ea6a604",
    "metadata": {},
    "source": [
     "### Create and fit the regression model"
@@ -102,6 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e9425ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +125,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "907144b3",
    "metadata": {},
    "source": [
     "### View parameters\n",
@@ -122,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf3490c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +147,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fece7e98",
    "metadata": {},
    "source": [
     "### Make predictions\n",
@@ -142,6 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "92b092d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +173,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "80153566",
    "metadata": {},
    "source": [
     "### Plot Results\n",
@@ -166,6 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1c1eb2fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +200,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d68913e6",
    "metadata": {},
    "source": [
     "## Congratulations!\n",
@@ -193,6 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1171c9f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -214,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
