--- a/Course-2 Advanced Learning Algorithms/2_Neural network training/programming resources/2_SoftMax.ipynb
+++ b/Course-2 Advanced Learning Algorithms/2_Neural network training/programming resources/2_SoftMax.ipynb
@@ -9,7 +9,7 @@
     "# Optional Lab - Softmax Function\n",
     "In this lab, we will explore the softmax function. This function is used in both Softmax Regression and in Neural Networks when solving Multiclass Classification problems.  \n",
     "\n",
-    "<center>  <img  src=\"./images/C2_W2_Softmax_Header.PNG\" width=\"600\" />  <center/>\n",
+    "<center>  <img  src=\"./images/C2_W2_Softmax_Header.PNG\" width=\"1000\" />  <center/>\n",
     "\n",
     "  "
    ]
@@ -24,38 +24,17 @@
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('./deeplearning.mplstyle')\n",
     "import pandas as pd\n",
-    "from matplotlib import pyplot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from matplotlib import pyplot\n",
+    "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
     "from IPython.display import display, Markdown, Latex\n",
-    "from sklearn.datasets import make_blobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.datasets import make_blobs\n",
+    "\n",
     "from matplotlib.widgets import Slider\n",
-    "%matplotlib widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%matplotlib widget\n",
+    "\n",
     "from lab_utils_common import dlc\n",
     "from lab_utils_softmax import plt_softmax\n",
     "import logging\n",
@@ -115,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,13 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b9ef863831b4d21877c47875bdc6f5b",
+       "model_id": "2e40b7b23dd44b9e8a6b2f10025bd743",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,7 +164,7 @@
    },
    "source": [
     "## Cost\n",
-    "<center> <img  src=\"./images/C2_W2_SoftMaxCost.png\" width=\"400\" />    <center/>"
+    "<center> <img  src=\"./images/C2_W2_SoftMaxCost.png\" width=\"1000\" />    <center/>"
    ]
   },
   {
@@ -242,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -255,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +249,7 @@
        "       [ 0.38,  1.5 ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +269,7 @@
        "array([ 1.56, -5.34, -4.09, ..., -0.84,  5.04,  0.38])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +289,7 @@
        "array([ 0.85,  1.03,  0.68, ..., -1.95, -2.92,  1.5 ])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +309,7 @@
        "array([2, 0, 0, ..., 1, 3, 2])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +329,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,13 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78dcfffa137e478c848c0b2f4f6c2862",
+       "model_id": "aa705998831a4b238eb95382c2961483",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -416,7 +395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78dcfffa137e478c848c0b2f4f6c2862",
+       "model_id": "aa705998831a4b238eb95382c2961483",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,6 +428,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p>\n",
+    "    \n",
+    "    SoftMax Classifier    ::   model --> p_nonpreferred(categorical)\n",
+    "\n",
+    "    Improved Version of Classifier   ::   preferred_model --> p_preferred(linear) --> sm_preferred(categorical)\n",
+    "<p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h1 style=\"text-align:center; font-family:courier; font-size:300%\">SoftMax Classifier</h1>"
    ]
   },
@@ -471,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -488,41 +479,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-25 22:06:16.103723: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2022-12-20 22:36:25.262968: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63/63 [==============================] - 0s 541us/step - loss: 0.8183\n",
+      "63/63 [==============================] - 0s 507us/step - loss: 0.7214\n",
       "Epoch 2/10\n",
-      "63/63 [==============================] - 0s 473us/step - loss: 0.3668\n",
+      "63/63 [==============================] - 0s 478us/step - loss: 0.2928\n",
       "Epoch 3/10\n",
-      "63/63 [==============================] - 0s 459us/step - loss: 0.1902\n",
+      "63/63 [==============================] - 0s 449us/step - loss: 0.1418\n",
       "Epoch 4/10\n",
-      "63/63 [==============================] - 0s 439us/step - loss: 0.1077\n",
+      "63/63 [==============================] - 0s 427us/step - loss: 0.0895\n",
       "Epoch 5/10\n",
-      "63/63 [==============================] - 0s 429us/step - loss: 0.0746\n",
+      "63/63 [==============================] - 0s 432us/step - loss: 0.0684\n",
       "Epoch 6/10\n",
-      "63/63 [==============================] - 0s 441us/step - loss: 0.0595\n",
+      "63/63 [==============================] - 0s 439us/step - loss: 0.0566\n",
       "Epoch 7/10\n",
-      "63/63 [==============================] - 0s 445us/step - loss: 0.0508\n",
+      "63/63 [==============================] - 0s 437us/step - loss: 0.0491\n",
       "Epoch 8/10\n",
-      "63/63 [==============================] - 0s 431us/step - loss: 0.0444\n",
+      "63/63 [==============================] - 0s 449us/step - loss: 0.0442\n",
       "Epoch 9/10\n",
-      "63/63 [==============================] - 0s 408us/step - loss: 0.0391\n",
+      "63/63 [==============================] - 0s 420us/step - loss: 0.0406\n",
       "Epoch 10/10\n",
-      "63/63 [==============================] - 0s 2ms/step - loss: 0.0358\n"
+      "63/63 [==============================] - 0s 432us/step - loss: 0.0377\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1657ae9b0>"
+       "<keras.callbacks.History at 0x167d7af20>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,23 +547,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63/63 [==============================] - 0s 322us/step\n",
-      "[[4.39e-03 4.83e-03 9.77e-01 1.36e-02]\n",
-      " [9.97e-01 3.19e-03 2.77e-05 4.99e-06]]\n",
-      "largest value 0.9999999 smallest value 3.014424e-10\n"
+      "63/63 [==============================] - 0s 340us/step\n",
+      "[[2.55e-03 6.27e-03 9.73e-01 1.84e-02]\n",
+      " [9.98e-01 2.06e-03 7.54e-05 4.04e-05]\n",
+      " [9.79e-01 1.92e-02 1.09e-03 4.69e-04]\n",
+      " ...\n",
+      " [9.32e-04 9.91e-01 4.07e-03 4.34e-03]\n",
+      " [9.22e-08 4.34e-05 3.52e-05 1.00e+00]\n",
+      " [4.72e-03 7.10e-03 9.86e-01 2.51e-03]]\n"
      ]
     }
    ],
    "source": [
     "p_nonpreferred = model.predict(X_train)\n",
-    "print(p_nonpreferred [:2])\n",
+    "print(p_nonpreferred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.55e-03 6.27e-03 9.73e-01 1.84e-02]\n",
+      " [9.98e-01 2.06e-03 7.54e-05 4.04e-05]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p_nonpreferred [:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "largest value 1.0 smallest value 1.109497e-11\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"largest value\", np.max(p_nonpreferred), \"smallest value\", np.min(p_nonpreferred))"
    ]
   },
@@ -580,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preferred <img align=\"Right\" src=\"./images/C2_W2_softmax_accurate.png\"  style=\" width:400px; padding: 10px 20px ; \">\n",
+    "### Preferred <img align=\"Right\" src=\"./images/C2_W2_softmax_accurate.png\"  style=\" width:1000px; padding: 10px 20px ; \">\n",
     "Recall from lecture, more stable and accurate results can be obtained if the softmax and loss are combined during training.   This is enabled by the 'preferred' organization shown here.\n"
    ]
   },
@@ -600,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -611,34 +640,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "63/63 [==============================] - 0s 501us/step - loss: 0.9680\n",
+      "63/63 [==============================] - 0s 464us/step - loss: 1.0984\n",
       "Epoch 2/10\n",
-      "63/63 [==============================] - 0s 488us/step - loss: 0.4224\n",
+      "63/63 [==============================] - 0s 472us/step - loss: 0.5278\n",
       "Epoch 3/10\n",
-      "63/63 [==============================] - 0s 457us/step - loss: 0.2292\n",
+      "63/63 [==============================] - 0s 456us/step - loss: 0.2734\n",
       "Epoch 4/10\n",
-      "63/63 [==============================] - 0s 461us/step - loss: 0.1331\n",
+      "63/63 [==============================] - 0s 446us/step - loss: 0.1461\n",
       "Epoch 5/10\n",
-      "63/63 [==============================] - 0s 433us/step - loss: 0.0876\n",
+      "63/63 [==============================] - 0s 450us/step - loss: 0.0914\n",
       "Epoch 6/10\n",
-      "63/63 [==============================] - 0s 432us/step - loss: 0.0637\n",
+      "63/63 [==============================] - 0s 436us/step - loss: 0.0669\n",
       "Epoch 7/10\n",
-      "63/63 [==============================] - 0s 450us/step - loss: 0.0540\n",
+      "63/63 [==============================] - 0s 427us/step - loss: 0.0541\n",
       "Epoch 8/10\n",
-      "63/63 [==============================] - 0s 447us/step - loss: 0.0476\n",
+      "63/63 [==============================] - 0s 427us/step - loss: 0.0460\n",
       "Epoch 9/10\n",
-      "63/63 [==============================] - 0s 474us/step - loss: 0.0432\n",
+      "63/63 [==============================] - 0s 425us/step - loss: 0.0408\n",
       "Epoch 10/10\n",
-      "63/63 [==============================] - 0s 475us/step - loss: 0.0396\n"
+      "63/63 [==============================] - 0s 434us/step - loss: 0.0371\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1656eda80>"
+       "<keras.callbacks.History at 0x1682cc5b0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,6 +703,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63/63 [==============================] - 0s 334us/step\n",
+      "[[-2.65 -1.44  2.74 -1.15]\n",
+      " [ 3.41 -1.86 -6.53 -7.64]\n",
+      " [ 2.11 -0.98 -4.89 -6.12]\n",
+      " ...\n",
+      " [-2.47  2.89 -1.62 -2.82]\n",
+      " [-4.03 -4.12 -3.42  5.54]\n",
+      " [-2.09 -0.92  3.81 -2.4 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_preferred = preferred_model.predict(X_train)\n",
+    "print(p_preferred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -681,18 +735,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63/63 [==============================] - 0s 342us/step\n",
       "two example output vectors:\n",
-      " [[-3.1  -2.24  3.57  0.03]\n",
-      " [ 4.3  -0.97 -6.25 -3.85]]\n",
-      "largest value 11.478956 smallest value -9.255949\n"
+      " [[-2.65 -1.44  2.74 -1.15]\n",
+      " [ 3.41 -1.86 -6.53 -7.64]]\n"
      ]
     }
    ],
    "source": [
-    "p_preferred = preferred_model.predict(X_train)\n",
-    "print(f\"two example output vectors:\\n {p_preferred[:2]}\")\n",
-    "print(\"largest value\", np.max(p_preferred), \"smallest value\", np.min(p_preferred))"
+    "print(f\"two example output vectors:\\n {p_preferred[:2]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largest value 9.024477 Smallest value -12.730624\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Largest value\", np.max(p_preferred), \"Smallest value\", np.min(p_preferred))"
    ]
   },
   {
@@ -705,28 +772,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "two example output vectors:\n",
-      " [[1.22e-03 2.89e-03 9.68e-01 2.79e-02]\n",
-      " [9.95e-01 5.13e-03 2.61e-05 2.86e-04]]\n",
-      "largest value 0.9999999 smallest value 5.5657936e-09\n"
-     ]
-    }
-   ],
-   "source": [
-    "sm_preferred = tf.nn.softmax(p_preferred).numpy()\n",
-    "print(f\"two example output vectors:\\n {sm_preferred[:2]}\")\n",
-    "print(\"largest value\", np.max(sm_preferred), \"smallest value\", np.min(sm_preferred))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -734,24 +779,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.1  -2.24  3.57  0.03], category: 2\n",
-      "[ 4.3  -0.97 -6.25 -3.85], category: 0\n",
-      "[ 3.02 -0.19 -4.62 -3.13], category: 0\n",
-      "[-0.64  4.26 -2.   -1.05], category: 1\n",
-      "[-2.04 -3.27  4.72 -2.43], category: 2\n"
+      "two example output vectors:\n",
+      " [[4.38e-03 1.47e-02 9.61e-01 1.96e-02]\n",
+      " [9.95e-01 5.16e-03 4.83e-05 1.59e-05]]\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):\n",
-    "    print( f\"{p_preferred[i]}, category: {np.argmax(p_preferred[i])}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style=\"text-align:center; font-family:courier; font-size:300%\">(p_nonpreferred vs p_preferred) model</h2>"
+    "sm_preferred = tf.nn.softmax(p_preferred).numpy()\n",
+    "print(f\"two example output vectors:\\n {sm_preferred[:2]}\")"
    ]
   },
   {
@@ -763,17 +799,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "63/63 [==============================] - 0s 327us/step\n",
-      "[[4.39e-03 4.83e-03 9.77e-01 1.36e-02]\n",
-      " [9.97e-01 3.19e-03 2.77e-05 4.99e-06]]\n",
-      "largest value 0.9999999 smallest value 3.014424e-10\n"
+      "largest value 0.9999993 smallest value 3.1904683e-09\n"
      ]
     }
    ],
    "source": [
-    "p_nonpreferred = model.predict(X_train)\n",
-    "print(p_nonpreferred [:2])\n",
-    "print(\"largest value\", np.max(p_nonpreferred), \"smallest value\", np.min(p_nonpreferred))"
+    "print(\"largest value\", np.max(sm_preferred), \"smallest value\", np.min(sm_preferred))"
    ]
   },
   {
@@ -785,10 +816,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[-2.65 -1.44  2.74 -1.15], category : 2\n",
+      "[ 3.41 -1.86 -6.53 -7.64], category : 0\n",
+      "[ 2.11 -0.98 -4.89 -6.12], category : 0\n",
+      "[-2.49  2.95 -1.75 -2.95], category : 1\n",
+      "[-1.37 -1.84  4.26 -4.39], category : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print( f\"{p_preferred[i]}, category : {np.argmax(p_preferred[i])}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"text-align:center; font-family:courier; font-size:300%\">(p_nonpreferred vs p_preferred) model</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63/63 [==============================] - 0s 334us/step\n",
+      "[[2.55e-03 6.27e-03 9.73e-01 1.84e-02]\n",
+      " [9.98e-01 2.06e-03 7.54e-05 4.04e-05]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_nonpreferred = model.predict(X_train)\n",
+    "print(p_nonpreferred [:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "largest value 1.0 smallest value 1.109497e-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"largest value\", np.max(p_nonpreferred), \"smallest value\", np.min(p_nonpreferred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "two example output vectors:\n",
-      " [[1.22e-03 2.89e-03 9.68e-01 2.79e-02]\n",
-      " [9.95e-01 5.13e-03 2.61e-05 2.86e-04]]\n",
-      "largest value 0.9999999 smallest value 5.5657936e-09\n"
+      " [[4.38e-03 1.47e-02 9.61e-01 1.96e-02]\n",
+      " [9.95e-01 5.16e-03 4.83e-05 1.59e-05]]\n",
+      "largest value 0.9999993 smallest value 3.1904683e-09\n"
      ]
     }
    ],
